--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -24,18 +24,18 @@ de:
   change_your_locale: "Sprache ändern"
 
   # Voting widget
-  did_this_help: "Hat das Ihr Problem gelöst?"
+  did_this_help: "Hat das Dein Problem gelöst?"
   yes_button: 'Ja'
   no_button: 'Nein'
-  yes_helped: 'Toll! Danke für Ihre Bewertung!'
-  no_helped: 'Es tut uns leid, dass wir nicht helfen konnten. Bitte kontaktieren Sie uns für weitere Hilfe!'
+  yes_helped: 'Toll! Danke für Deine Bewertung!'
+  no_helped: 'Es tut uns leid, dass wir nicht helfen konnten. Bitte kontaktiere uns für weitere Hilfe!'
 
   # Search
-  search_placeholder: "Geben Sie ein Stichwort, Thema oder eine Frage ein"
-  no_results: "Keine Suchergebnisse, bitte suchen Sie erneut!"
+  search_placeholder: "Gib ein Stichwort, Thema oder eine Frage ein"
+  no_results: "Keine Suchergebnisse, bitte suche erneut!"
   results_found:
-    one: "ein Ergebnis wurde für Ihre Suche gefunden "
-    other: "%{count} Ergebnisse wurden für Ihre Suche gefunden "
+    one: "ein Ergebnis wurde für Deine Suche gefunden "
+    other: "%{count} Ergebnisse wurden für Deine Suche gefunden "
 
   # Community
   forum_name: "Foren"
@@ -49,7 +49,7 @@ de:
   submit_reply: "Antwort abschicken"
   posted: "Abgeschickt"
   start_discussion: "Eine neue Diskussion beginnen"
-  submit_start_discussion: "Diskussion beginnen"
+  submit_start_discussion: "Frage stellen"
   should_message_be_private: "Soll diese Nachricht privat sein?"
   only_support_can_respond: "Nur der Support kann antworten (ein privates Ticket erstellen)"
   responses_can_come_from_everyone: "Antworten können vom Support oder der Community kommen (empfohlen)"
@@ -65,14 +65,14 @@ de:
 
   # Tickets
   tickets: "Tickets"
-  no_tickets: "Sie haben noch keine Tickets erstellt"
+  no_tickets: "Du hast noch keine Tickets erstellt"
   ticket_number: "Ticket Nummer"
   assigned_to_label: "Zugewiesen an"
   created_on: "Erstellt"
 
   # Get Help
-  get_help_header: "Brauchen Sie noch Hilfe?"
-  get_help_button: "Stellen Sie Ihre Frage"
+  get_help_header: "Brauchst Du noch Hilfe?"
+  get_help_button: "Stelle Deine Frage"
 
   # Profile
   my_profile: 'Mein Profil'
@@ -85,7 +85,7 @@ de:
   # flag
   flag_for_review: "Zur Überprüfung melden"
   flag_post_for_review: "Diesen Beitrag zur Überprüfung melden"
-  flag_post_placeholder: "Beschreiben Sie den Grund für eine Überprüfung des Beitrages"
+  flag_post_placeholder: "Beschreibe den Grund für eine Überprüfung des Beitrages"
   flag: "Melden"
 
   # devise/sessions/new
@@ -206,7 +206,7 @@ de:
   asked_a_question: "%{user_name} hat eine Frage gestellt..."
   replied: "%{user_name} hat geantwortet..."
   posted_note: "%{user_name} hat eine interne Notiz gesendet..."
-  type_reply: Schreiben Sie eine Antwort oder wählen Sie unten eine Textvorlage aus
+  type_reply: Schreib eine Antwort oder wähle unten eine Textvorlage aus
   select_common: Textvorlage auswählen
   reply: Antworten
   internal_note: Interne Notiz
@@ -225,7 +225,7 @@ de:
   select_category: Kategorie auswählen
   delete: Löschen
   view_and_edit: "Inhalte anzeigen und bearbeiten"
-  delete_confirm: "Bitte bestätigen Sie, dass Sie dies LÖSCHEN wollen!"
+  delete_confirm: "Bitte bestätige, dass Du dies LÖSCHEN wollen!"
   select_icon_helptext: "Symbol für die Kategorie auswählen (optional)"
   translate: "In eine andere Sprache übersetzen"
   view_on_site: "Ansehen auf Seite"
@@ -254,11 +254,11 @@ de:
   # Mail messages
   new_user_subject: "Willkommen bei %{site_name}"
   hello: "Hallo %{user_name}"
-  new_user: "Vielen Dank, dass Sie uns kontaktieren. Ihre Nachricht wurde von unserem Support Team empfangen und wir werden uns in Kürze mit einer Antwort bei Ihnen melden."
-  account_generated: "Ein Benutzerkonto zur Einsicht der Kommunikation wurde für Sie erstellt. Um sich Anzumelden, benutzen Sie bitte diesen Link:"
-  above_this_line: "Bitte antworten Sie ausschliesslich oberhalb dieser Zeile."
+  new_user: "Vielen Dank, dass Du uns kontaktierst. Deine Nachricht wurde von unserem Support Team empfangen und wir werden uns in Kürze mit einer Antwort bei Dir melden."
+  account_generated: "Ein Benutzerkonto zur Einsicht der Kommunikation wurde für Dich erstellt. Um sich Anzumelden, benutze bitte diesen Link:"
+  above_this_line: "Bitte antworte ausschliesslich oberhalb dieser Zeile."
   message_id: "Nachrichten-ID"
-  message_response: "Die folgende Nachricht wurde als Antwort auf Ihre Frage verfasst:"
+  message_response: "Die folgende Nachricht wurde als Antwort auf Deine Frage verfasst:"
   view_online: "Online ansehen:"
 
   # Admin notifications
@@ -291,8 +291,8 @@ de:
   add_key: "Neuen Key hinzufügen"
   expire_token: "Token ablaufen lassen"
   expired: "Abgelaufen"
-  expire_confirm: "Bitte bestätigen Sie, dass Sie diesen Token wirklick ablaufen lassen wollen."
-  spec_note: "Sie können unsere interaktive API Spezifikation hier lesen und testen: "
+  expire_confirm: "Bitte bestätige, dass Du diesen Token wirklick ablaufen lassen willst."
+  spec_note: "Du kannst  unsere interaktive API Spezifikation hier lesen und testen: "
 
   # Insights
   team_insights: "Team Statistik für %{site_name}"
@@ -414,7 +414,7 @@ de:
     links:
       back: "Zurück"
       cancel: "Abbrechen"
-      confirm: "Sind Sie sicher?"
+      confirm: "Bist Du sicher?"
       destroy: "Löschen"
       new: "Neu"
       edit: "Bearbeiten"
